--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 * {
     margin: 0px;
-    padding: 0px    ;
+    padding: 0px;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     /*justify-content: center;*/
-    align-items:center;
+    align-items: center;
     margin: 8px;
 }
 
@@ -19,7 +19,7 @@ header {
     margin-bottom: 1rem;
 }
 
-.schedule > h3 {
+.schedule>h3 {
     margin-bottom: .5rem;
 }
 
@@ -62,6 +62,11 @@ a {
     border-radius: 2px;
 }
 
+.route.active {
+    box-shadow: 0px 4px 8px #ddd;
+    margin-bottom: 1em;
+}
+
 .scheduledDeparture {
     grid-area: scheduledDeparture;
     /*text-align: right;*/
@@ -85,16 +90,12 @@ a {
     display: none;
 }
 
-.panel.active {
-    display: block;
-}
 
-.sailings{
+.sailings {
     margin-top: 1em;
 }
 
-.heading {
-}
+.heading {}
 
 .sailing {
     margin-bottom: .5em;
