--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,20 +1,18 @@
-<header><h1>Ferry Tracker</h1>
-{{!--<h2>headingtwo</h2>--}}
-<p>This is a simple website to show today's sailings on BC Ferries. Designed and 
-built by <a href="https://www.twitter.com/deansallinen">@deansallinen</a> using Node.js</p>
-{{!--<h4>headingfour</h4>--}}
-{{!--<h5>headingfive</h5>--}}
-{{!--<h6>headingsix</h6>--}}
+<header>
+    <h1>Ferry Tracker</h1>
+    {{!--
+    <h2>headingtwo</h2>--}}
+    <p>This is a simple website to show today's sailings on BC Ferries. Designed and built by <a href="https://www.twitter.com/deansallinen">@deansallinen</a> using Node.js</p>
+    {{!--
+    <h4>headingfour</h4>--}} {{!--
+    <h5>headingfive</h5>--}} {{!--
+    <h6>headingsix</h6>--}}
 </header>
 <div class="schedule">
     <h3>Current Schedule</h3>
     {{#each routes}}
     <div class="route" id="{{routeName}}">
-        <div class="accordion">
-            {{!--<a href="#{{routeName}}">--}}
-                <h3 class="routeName">{{routeName}} </h3>
-            {{!--</a>--}}
-        </div>
+        <h3 class="routeName">{{routeName}} </h3>
         <div class="panel">
             <h6 class="sailingTime">Sailing Time: {{sailingTime}}</h6>
             <div class="sailings">
