--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,9 @@
-<header>
-    <h1>Ferry Tracker</h1>
-    {{!--
-    <h2>headingtwo</h2>--}}
-    <p>This is a simple website to show today's sailings on BC Ferries. Designed and built by <a href="https://www.twitter.com/deansallinen">@deansallinen</a> using Node.js</p>
-    {{!--
-    <h4>headingfour</h4>--}} {{!--
-    <h5>headingfive</h5>--}} {{!--
-    <h6>headingsix</h6>--}}
-</header>
 <div class="schedule">
-    <h3>Current Schedule</h3>
+    <header>
+        <h1><a href="#">Ferry Tracker</a></h1>
+        <p>This simple website shows today's BC Ferries sailings.</p>
+        <h5>Current Schedule</h5>
+    </header>
     {{#each routes}}
     <div class="route" id="{{routeName}}">
         <h3 class="routeName">{{routeName}} </h3>
@@ -39,4 +33,7 @@
         </div>
     </div>
     {{/each}}
+    <footer>
+        <p>Designed and built by <a href="https://www.twitter.com/deansallinen" id="twitter">@deansallinen</a> using Node.js</p>
+    </footer>
 </div>
