add bundle script

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -24,4 +24,4 @@ title: Ferrytime
     </a>
 {%- endfor -%}
 
-<script type="module" src="/_dist_/index.js"></script>
+{% comment %} <script type="module" src="/_dist_/index.js"></script> {% endcomment %}
