--- a/_includes/layouts/base.liquid
+++ b/_includes/layouts/base.liquid
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>
-      
+      {{ title }}
     </title>
 
     <meta
@@ -29,11 +29,7 @@
       </div>
     </nav>
           <div class="flex flex-col flex-1  max-w-xl mx-auto px-3 py-8 md:p-8 w-full ">
-		  <h1>About</h1>
-<p><a href="https://www.11ty.dev/">11ty</a>, powered by <a href="http://snowpack.dev/">Snowpack</a>.</p>
-<br/>
-<p><a href="/">Back to Home</a></p>
-
+		  {{content}}
           </div>
 
           <footer class="bg-blue-500 antialiased">
